--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assignment-2.13-deploy-test",
-  "homepage": "https://dreamzspl.github.io/deploy-test",
+  "homepage": "https://dreamzspl.github.io/assignment-2.13-deploy-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
